[package]
name = "todo_util"
version = "0.1.0"
authors = ["lawmhs <matthew.hs.law@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.9", features = [ "paw" ]}
paw = "1.0"
clap = "2.33.0"